add content to ssineri'z slide

--- a/_posts/0000-01-02-ssineriz.md
+++ b/_posts/0000-01-02-ssineriz.md
@@ -2,5 +2,11 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Don't try this at home:
+___
+
+'''
+rm -rf
+'''
+
 Use the left arrow to go back!
